--- a/encoding.html
+++ b/encoding.html
@@ -9,6 +9,7 @@
         textarea { width: 100%; height: 100px; margin-bottom: 10px; }
         select { padding: 10px; margin-right: 10px; }
         #output { margin-top: 10px; font-weight: bold; }
+        #binaryOutput { font-family: monospace; word-wrap: break-word; white-space: pre-wrap; margin-top: 10px; }
     </style>
 </head>
 <body>
@@ -23,6 +24,8 @@
         <option value="utf-32">UTF-32</option>
     </select>
     <p id="output"></p>
+    <p><strong>Binary Representation:</strong></p>
+    <p id="binaryOutput"></p>
 
     <script>
         function calculateSize() {
@@ -44,6 +47,7 @@
             }
             
             document.getElementById("output").innerText = `Encoded Size: ${encodedData.length} bytes`;
+            document.getElementById("binaryOutput").innerText = Array.from(encodedData).map(byte => byte.toString(2).padStart(8, '0')).join(' ');
         }
 
         document.getElementById("textInput").addEventListener("input", calculateSize);
